exports[`Switch with listeners matches snapshot 1`] = `
<div
  className="switch">
  <label>
    Off
    <input
      className="validate anotherClass"
      disabled={false}
      id="test"
      name="test_input"
      onChange={[Function bound _onChange]}
      onClick={[Function bound _onChange]}
      onMouseEnter={[Function bound _onMouseEnter]}
      onMouseLeave={[Function bound _onMouseLeave]}
      required={true}
      type="checkbox" />
    <span
      className="lever" />
    On
  </label>
</div>
`;

exports[`Switch with value matches snapshot 1`] = `
<div
  className="switch">
  <label>
    Off
    <input
      checked={false}
      className=""
      disabled={false}
      id="test"
      name="test_input"
      onChange={[Function bound _onChange]}
      onClick={[Function bound _onChange]}
      onMouseEnter={[Function bound _onMouseEnter]}
      onMouseLeave={[Function bound _onMouseLeave]}
      required={false}
      type="checkbox" />
    <span
      className="lever" />
    On
  </label>
</div>
`;

exports[`Switch without listeners matches snapshot 1`] = `
<div
  className="switch">
  <label>
    Off
    <input
      checked={true}
      className=""
      disabled={false}
      id="test"
      name="test_input"
      onChange={[Function bound _onChange]}
      onClick={[Function bound _onChange]}
      onMouseEnter={[Function bound _onMouseEnter]}
      onMouseLeave={[Function bound _onMouseLeave]}
      required={true}
      type="checkbox" />
    <span
      className="lever" />
    On
  </label>
</div>
`;
